force-app/main/default/objects/Case/fields/Delivery_address2__c.field-meta.xml
<CustomField>
    <fullName>Delivery_address2__c</fullName>
    <label>Delivery address</label>
    <type>TextArea</type>
</CustomField>