force-app/main/default/objects/Case/fields/Email_about_Expected_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>Email_about_Expected_delivery_date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email about Expected delivery date</label>
    <type>Checkbox</type>
</CustomField>