force-app/main/default/objects/Case/fields/Email_for_BMW_car_transport__c.field-meta.xml
<CustomField>
    <fullName>Email_for_BMW_car_transport__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email for transport of new cars (BMW Version)</description>
    <label>Email for BMW car transport</label>
    <type>Checkbox</type>
</CustomField>