force-app/main/default/objects/Case/fields/Email_for_day_to_day_transport__c.field-meta.xml
<CustomField>
    <fullName>Email_for_day_to_day_transport__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email for transport of new cars (Day-to-day)</description>
    <label>Email for day-to-day transport</label>
    <type>Checkbox</type>
</CustomField>