force-app/main/default/objects/Case/fields/Email_for_IRK_codes__c.field-meta.xml
<CustomField>
    <fullName>Email_for_IRK_codes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email for IRK codes</label>
    <type>Checkbox</type>
</CustomField>