force-app/main/default/objects/Case/fields/Email_for_Leasing_codes__c.field-meta.xml
<CustomField>
    <fullName>Email_for_Leasing_codes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email for Leasing codes</label>
    <type>Checkbox</type>
</CustomField>