force-app/main/default/objects/Case/fields/Email_for_new_car_transport__c.field-meta.xml
<CustomField>
    <fullName>Email_for_new_car_transport__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email for transport of new cars (Normal)</description>
    <label>Email for new car transport</label>
    <type>Checkbox</type>
</CustomField>