force-app/main/default/objects/Case/fields/Email_for_plates_invoice_Navision__c.field-meta.xml
<CustomField>
    <fullName>Email_for_plates_invoice_Navision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email for plates invoice Navision</label>
    <type>Checkbox</type>
</CustomField>