force-app/main/default/objects/Case/fields/Email_logging_of_registration_num__c.field-meta.xml
<CustomField>
    <fullName>Email_logging_of_registration_num__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emails logging of registration numbers</label>
    <type>Checkbox</type>
</CustomField>