force-app/main/default/objects/Case/fields/Email_to_buyer_about_keys_EN__c.field-meta.xml
<CustomField>
    <fullName>Email_to_buyer_about_keys_EN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email to notify buyer of keys and documents (English version)</description>
    <label>Email to buyer about keys (EN)</label>
    <type>Checkbox</type>
</CustomField>