force-app/main/default/objects/Case/fields/Email_to_DAL_about_Damage_check__c.field-meta.xml
<CustomField>
    <fullName>Email_to_DAL_about_Damage_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email to DAL about Damage check</label>
    <type>Checkbox</type>
</CustomField>