force-app/main/default/objects/Case/fields/Email_to_DAL_for_transport_booking__c.field-meta.xml
<CustomField>
    <fullName>Email_to_DAL_for_transport_booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email to DAL for transport booking</label>
    <type>Checkbox</type>
</CustomField>