force-app/main/default/objects/Case/fields/Email_to_DAL_from_Defleet__c.field-meta.xml
<CustomField>
    <fullName>Email_to_DAL_from_Defleet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email to DAL from Defleet</label>
    <type>Checkbox</type>
</CustomField>