force-app/main/default/objects/Case/fields/Email_to_financing__c.field-meta.xml
<CustomField>
    <fullName>Email_to_financing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NOT IN USE - used in flow for Email towards Financing, but the flow is not use and email shall be sent manually in outlook</description>
    <label>Email towards financing</label>
    <type>Checkbox</type>
</CustomField>