force-app/main/default/objects/Case/fields/Email_to_inform_dealer_about_Behovsdato__c.field-meta.xml
<CustomField>
    <fullName>Email_to_inform_dealer_about_Behovsdato__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email to inform dealer about Behovsdato</label>
    <type>Checkbox</type>
</CustomField>