force-app/main/default/objects/Case/fields/Leasing_company__c.field-meta.xml
<CustomField>
    <fullName>Leasing_company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leasing company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Leasing Company</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>